# rust-efi-test

./: .gitignore  Cargo.toml  LICENSE  OVMF.fd  README.md  Session.vim  qemu  qemu.bat
.cargo/: config.toml
iso/EFI/BOOT/: BOOTx64.efi
src/: core_globals.rs  efi_utilities.rs  lib.rs  main.rs  panic.rs  tty.rs
src/arch/: mod.rs
src/arch/aarch64/: mem.rs  utils.rs
src/arch/x86_64/: Cargo.toml  mod.rs  serial_tty.rs  serial_writer.rs  utils.rs
src/arch/x86_64/src/: lib.rs  mem.rs
