[package]
name = "os"
description = "A badly written toy Operating System with too many bugs"
readme = "README.md"
repository = "https://github.com/"
license = "MIT"
version = "0.0.0"
authors = ["dfs"]
edition = "2018"

[dependencies]
r-efi = "4.0.0"

[target.'cfg(target_arch="x86_64")'.dependencies]
arch = {path = "src/arch/x86_64"}
